fix text align

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -723,7 +723,6 @@ h4 {
     height: auto;
     width: 60%;
     padding: 3rem;
-    text-align: center;
 
     display: flex;
     flex-direction: column;
